# Vogue

./: .gitignore  CMakeLists.txt  IDEAS.md  README.md
media/config/: settings.ini
media/gamedata/body/: male_body1.default  male_body1.qb  male_body2.qb
media/gamedata/colours/: hair_colours.txt  skin_colours.txt
media/gamedata/ears/: ears1.qb  ears2.qb  ears3.qb  ears4.qb  ears5.qb  ears6.qb
media/gamedata/facial_hair/: facial_hair1.default  facial_hair1.qb  facial_hair2.default  facial_hair2.qb  facial_hair3.default  facial_hair3.qb  facial_hair4.default  facial_hair4.qb  facial_hair5.default  facial_hair5.qb  facial_hair6.default  facial_hair6.qb  facial_hair7.default  facial_hair7.qb  facial_hair9.default  facial_hair9.qb
media/gamedata/glasses/: glasses1.qb  glasses2.default  glasses2.qb  glasses3.default  glasses3.qb  glasses4.default  glasses4.qb  glasses5.default  glasses5.qb
media/gamedata/hair/: female_hair1.default  female_hair1.qb  female_hair10.default  female_hair10.qb  female_hair2.default  female_hair2.qb  female_hair3.default  female_hair3.qb  female_hair4.default  female_hair4.qb  female_hair5.default  female_hair5.qb  female_hair6.default  female_hair6.qb  female_hair7.default  female_hair7.qb  female_hair8.default  female_hair8.qb  female_hair9.default  female_hair9.qb  male_hair1.default  male_hair1.qb  male_hair10.qb  male_hair11.default  male_hair11.qb  male_hair12.default  male_hair12.qb  male_hair13.qb  male_hair14.default  male_hair14.qb  male_hair15.default  male_hair15.qb  male_hair16.default  male_hair16.qb  male_hair17.default  male_hair17.qb  male_hair18.default  male_hair18.qb  male_hair19.default  male_hair19.qb  (+20 more)
media/gamedata/head/: base_head1.default  base_head1.qb  base_head2.qb
media/gamedata/heads/: base_head1.qb
media/gamedata/left_foot/: left_foot1.qb  left_foot2.qb  left_foot3.qb  left_foot4.default  left_foot4.qb  left_foot5.qb
media/gamedata/left_hand/: left_hand1.qb
media/gamedata/left_shoulder/: left_shoulder1.qb  left_shoulder2.qb
media/gamedata/legs/: female_legs1.qb  male_legs1.qb  male_legs2.default  male_legs2.qb
media/gamedata/models/human/: base_human1.character  base_human1.faces  base_human1.qb
media/gamedata/nose/: nose1.default  nose1.qb  nose2.qb  nose3.default  nose3.qb  nose4.default  nose4.qb  nose5.default  nose5.qb  nose6.default  nose6.qb  nose7.default  nose7.qb  nose8.default  nose8.qb
media/gamedata/right_foot/: right_foot1.qb  right_foot2.qb  right_foot3.default  right_foot3.qb  right_foot4.default  right_foot4.qb  right_foot5.qb
media/gamedata/right_hand/: right_hand1.qb
media/gamedata/right_shoulder/: right_shoulder1.default  right_shoulder1.qb  right_shoulder2.qb
media/gamedata/tiles/: stone_tile1.qb  stone_tile2.qb  stone_tile3.qb  wood_tile.qb
project/2015/: Vogue.sln  Vogue.vcxproj  Vogue.vcxproj.filters
source/: CMakeLists.txt  VogueCamera.cpp  VogueControls.cpp  VogueGUI.cpp  VogueGUI.h  VogueGame.cpp  VogueGame.h  VogueInput.cpp  VogueRender.cpp  VogueSettings.cpp  VogueSettings.h  VogueUpdate.cpp  VogueWindow.cpp  VogueWindow.h  main.cpp
source/Instance/: InstanceManager.cpp  InstanceManager.h
source/Maths/: 3dGeometry.h  3dmaths.cpp  3dmaths.h  Bezier3.cpp  Bezier4.cpp  BoundingRegion.h  Line3D.cpp  Plane3D.cpp  matrix4x4.cpp
source/Player/: Player.cpp  Player.h
source/Renderer/: Renderer.cpp  Renderer.h  camera.cpp  camera.h  colour.cpp  colour.h  framebuffer.h  frustum.cpp  frustum.h  light.h  material.h  mesh.cpp  mesh.h  texture.cpp  texture.h  vertexarray.h  viewport.h
source/freetype/: freetypefont.cpp  freetypefont.h
source/gui/: TreeView.cpp  abstractbutton.cpp  abstractbutton.h  button.cpp  button.h  checkbox.cpp  checkbox.h  component.cpp  component.h  container.cpp  container.h  dimensions.cpp  dimensions.h  directdrawrectangle.cpp  directdrawrectangle.h  draggablerenderrectangle.cpp  draggablerenderrectangle.h  event.cpp  event.h  eventlistener.cpp  eventlistener.h  focusevent.cpp  focusevent.h  focuslistener.cpp  focuslistener.h  focusmanager.cpp  focusmanager.h  formattedlabel.cpp  formattedlabel.h  guiwindow.cpp  guiwindow.h  guiwindowclosebutton.cpp  guiwindowclosebutton.h  guiwindowminimizebutton.cpp  guiwindowminimizebutton.h  icon.cpp  icon.h  keyevent.cpp  keyevent.h  keylistener.cpp  (+41 more)
source/models/: QubicleBinary.cpp  QubicleBinary.h  VoxelCharacter.cpp  VoxelCharacter.h
source/room/: CMakeLists.txt  Corridor.cpp  Corridor.h  Door.cpp  Door.h  Room.cpp  Room.h  RoomManager.cpp  RoomManager.h  Tile.cpp  Tile.h  TileManager.cpp  TileManager.h
source/utils/: CountdownTimer.cpp  CountdownTimer.h  FileUtils.cpp  FileUtils.h  Interpolator.cpp  Interpolator.h  Random.h  TimeManager.cpp  TimeManager.h
